--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,7 +1,18 @@
+
+== RelationAlgebra 1.3  (2015, July 27th) ==
+
+- distribution through opam, for Coq 8.4pl6
+- fixing some notation levels in [sups], [sums]
+
+== RelationAlgebra 1.2  (2013, February 25th) ==
+
+- make it compile with Coq 8.4pl4
+
 == RelationAlgebra 1.1  (2013, February 15th) ==
 
 - [paterson]: proof of equivalence of two flowchart schemes, due to Paterson
 - [compiler_opts]: added the two missing compiler optimisations
+- [imp]: nicer presentation, using a partially shallow embedding
 - [move]: tools to easily move subterms inside a product 
 - [lset]: fixed a typo
 
