--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,9 @@
 
+== RelationAlgebra 1.4  (2016, February 9th) ==
+
+- distribution through opam, for Coq 8.5.0
+- new module [relalg] for standard relation algebra facts and definitions
+
 == RelationAlgebra 1.3  (2015, July 27th) ==
 
 - distribution through opam, for Coq 8.4pl6
