--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+== RelationAlgebra 1.7.2  (2020, February 27th) ==
+
+- compatibility with Coq 8.10
+
 == RelationAlgebra 1.7.1  (2019, February 8th) ==
 
 - compatibility with Coq 8.9
