--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+== upcoming ==
+
+- model of setoid-preserving heterogeneous relations
+
 == RelationAlgebra 1.7.6  (2021, November 11th) ==
 
 - compatibility with Coq 8.14
