--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+== RelationAlgebra 1.7.9  (2023, March 17th) ==
+
+- compatibility with Coq 8.17
+
 == RelationAlgebra 1.7.8  (2022, September 8th) ==
 
 - compatibility with Coq 8.16
